# hermes-skills

./: .gitignore  README.md  models.json
cron_backup/: jobs.json
hermes-backup/: README.md
memories/: MEMORY.md  USER.md
pairing/: _rate_limits.json  telegram-approved.json
scripts/: khoj-research.py  watch-video.py
scripts_backup/: watch-video.py
sessions/: 20260426_081329_d6d07393.jsonl  20260429_070632_c50c7e89.jsonl  20260429_085255_31b04a.jsonl  20260429_092120_2225d558.jsonl  20260429_094908_fb4d88f8.jsonl  20260429_162016_cda166.jsonl  20260429_182122_42013f15.jsonl  20260429_182421_626ce2.jsonl  20260429_184813_0f6af3ec.jsonl  20260429_205244_d8b6a4b4.jsonl  20260429_205913_658188f3.jsonl  (+3761 more)
skills/hermes-weather-plugin/: .gitignore  MANIFEST.in  README.md  __init__.py  bootstrap.py  model_support.py  nws.py  plugin.yaml  pyproject.toml  schemas.py  skill.md
skills/hermes-weather-plugin/hermes_weather_plugin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
skills/hermes-weather-plugin/radar_backends/nexrad-render-cli/: Cargo.toml
skills/hermes-weather-plugin/radar_backends/nexrad-render-cli/src/: main.rs
skills/hermes-weather-plugin/showcase/: generate_radar_backend_compare.py  generate_showcase.py
skills/hermes-weather-plugin/showcase/latest/: index.html
skills/hermes-weather-plugin/showcase/latest/data/: ecape_graphcast.json  image_results.json  sounding_gdas.json  sounding_gfs.json  sounding_graphcast.json  sounding_hrrr.json  sounding_hrrrak.json  sounding_rrfs.json  summary.json
skills/hermes-weather-plugin/tools/: __init__.py  calc.py  data.py  images.py
skills/hermes-weather-plugin/verification/: README.md  _bootstrap.py  model_matrix.py  model_matrix_report.json  verify_wx_calc_report.json  verify_wx_ecape.py  verify_wx_ecape_report.json  verify_wx_sounding.py  verify_wx_sounding_report.json
(+3208 files in other folders)
