[package]
name = "nexrad-render-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
nexrad = { git = "https://github.com/danielway/nexrad", rev = "1591b64f7b34b14a88b1f020384c252052c8255f", package = "nexrad", default-features = false, features = ["model", "data", "render", "process", "aws", "chrono"] }
